actualización 1 archivo style.css

--- a/src/style.css
+++ b/src/style.css
@@ -166,7 +166,7 @@ body {
   border-radius: 20px;
   cursor: pointer;
   font-weight: bold;
-  color: #333;
+  color: #d64550;
   font-size: 13px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   display: none;
